# pxar

./: .gitignore  CMakeLists.txt
ana/: PixInitFunc.cc
constellation/: CMakeLists.txt  PxarSatellite.cpp  PxarSatellite.hpp  README.md  generator.cpp
core/: CMakeLists.txt
core/api/: api.cc  api.h  datatypes.cc  datatypes.h  dut.cc
core/cython/: PyPxarCore.pxd  PyPxarCore.pyx
core/decoder/: datapipe.cc  datapipe.h  datasource_evt.h
core/emulator/: generator.cc  rpc_calls.cpp  rpc_calls.h
core/hal/: datapipe.cc  datapipe.h  datasource_dtb.cc  hal.cc  hal.h
core/rpc/: rpc_error.cpp  rpc_error.h
core/usb/: USBInterface.libftd2xx.cc  USBInterface.libftdi.cc
core/utils/: dictionaries.h  helper.h  log.h  logging.h
gui/: PixGui.cc  PixParTab.cc
main/: pXar.cc
python/: CLIX.py  CLIX.sh  ErrorFinder.py  TreeWriter.py  all_errors.sh  cmdline.py  enableOne.txt  findI2C.py  iCLIX.py  maskall.set  myscript.py  myscript.sh  pxar_gui.py  pxar_helpers.py  pxar_plotter.py  startup.pxar  test.py  test.sh  testscript.txt  utils.py
tests/: PixTest.cc  PixTestCmd.cc  PixTestCmd.hh  PixTestFullTest.cc  PixTestPretest.cc  PixTestReadback.cc  PixTestScurves.cc  PixTestTiming.cc
usertests/: CMakeLists.txt  PixTestCmd.cc  PixTestSetVana.cc  martinstest.cpp  martinstest.h
util/: CMakeLists.txt  ConfigParameters.cc  ConfigParameters.hh  PixSetup.cc
